--- a/index.html
+++ b/index.html
@@ -1956,7 +1956,7 @@ textarea.form-input::-webkit-resizer { display: none; }
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>عرض القائمة</span>
 
           <ion-icon name="chevron-down"></ion-icon>
         </button>
@@ -2389,7 +2389,7 @@ function toggleText() {
     let icon = document.getElementById("toggle-icon");
 
     if (title.innerText === "المواسم والحلقات") {
-        title.innerText = "للمستخدمين على الهواتف المحمولة يمكنهم النقر على زر عرض المواسم لعرض حلقات كل موسم بالترتيب بينما يمكن لمستخدمي اللابتوب والكمبيوتر اختيار الموسم مباشرة من اعلى الصفخة ";
+        title.innerText = "للمستخدمين على الهواتف المحمولة يمكنهم النقر على زر عرض المواسم لعرض حلقات كل موسم بالترتيب بينما يمكن لمستخدمي اللابتوب والكمبيوتر اختيار الموسم مباشرة من اعلى الصفحة ";
         title.style.fontSize = "15px";
         icon.innerHTML = "&#8635;";
     } else {
@@ -2550,10 +2550,10 @@ function toggleText() {
 
     <!-- الأزرار المخفية -->
     <div class="project-buttons" style="display: none;">
-      <a href="https://rumble.com/v6r1ybe-rs1e1el-fans-home.html" class="project-button translated" target="_blank" onclick="event.stopPropagation();">
+      <a href="https://videa.hu/videok/film-animacio/rs1e1m-fans-home-KF_n59ceRAx6k60Cj" class="project-button translated" target="_blank" onclick="event.stopPropagation();">
         <ion-icon name="globe-outline"></ion-icon> مترجمة
       </a>
-     <a href="https://rumble.com/v6r1x5c-rs1e1-fans-home.html" class="project-button dubbed" target="_blank" onclick="event.stopPropagation();">
+     <a href="https://videa.hu/videok/film-animacio/rs1e1d-fans-home-9hg41T$zGuKzAqS1i" class="project-button dubbed" target="_blank" onclick="event.stopPropagation();">
         <ion-icon name="mic-outline"></ion-icon> مدبلجة
       </a>
     </div>
