--- a/index.html
+++ b/index.html
@@ -2221,7 +2221,7 @@ textarea.form-input::-webkit-resizer { display: none; }
         <section class="comments-section" style="margin-top: 40px;">
   <h3 class="h3 service-title">التعليقات </h3>
   <div id="comment-user-setup" style="margin-bottom: 10px;">
-    <input id="usernameInput" type="text" placeholder="حدد اسم لك يضهر بجانب تعليقك ( غير قابل للتغيير مجددا )" class="form-input">
+    <input id="usernameInput" type="text" placeholder="حدد اسم يضهر بجانب تعليقك ( غير قابل للتغيير مجددا )" class="form-input">
     <button onclick="setUsername()" class="form-btn">تأكيد الاسم</button>
   </div>
 
